# my-resume

./: .gitattributes  .gitignore  README.md  pyproject.toml  resume.json  variants.toml
.github/workflows/: build.yml
schema/: SOURCE.md
site/: 404.html.j2  index.html.j2  llms.txt.j2
src/resume_toolkit/: __init__.py  build.py  cli.py  model.py  paths.py  pdf.py  render.py  serve.py  site.py  variants.py  version.py
tests/: test_build.py  test_prose.py  test_render.py  test_site.py  test_validate.py  test_variants.py  test_version.py
themes/classic/: style.css  template.html.j2  template.md.j2
themes/classic/fonts/: LICENSE.md
