[project]
name = "resume-toolkit"
version = "0.1.0"
description = "Toolchain to validate a JSON Resume and render it to styled PDF/HTML"
readme = "README.md"
authors = [
    { name = "Jacques Thomazo", email = "jacques.thomazo@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.4",
    # [format] pulls the validators that make `format: uri` / `format: email`
    # actually enforceable rather than decorative.
    "jsonschema[format]>=4.23.0",
    "playwright>=1.49.0",
    "typer>=0.15.1",
]

[project.scripts]
resume = "resume_toolkit.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    # Test-only: used to assert the built PDF's page geometry and text layer.
    "pypdf>=5.1.0",
    # Typo gate (test_prose): catches the class the UK-spelling list cannot.
    "codespell>=2.4.3",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: drives a real Chromium; deselect with -m 'not slow'",
]

[tool.codespell]
# Vendored/generated content is not ours to spell-check.
skip = "./.git,./.venv,./dist,./schema,./themes/classic/fonts,./uv.lock"
# Proper nouns (employer, towns) and the deliberate 'utiliz' stem in the
# UK-spelling denylist.
ignore-words-list = "forsee,woking,chatou,utiliz"
